CSS Fix on Safari

--- a/public/mobile/style/style.css
+++ b/public/mobile/style/style.css
@@ -52,6 +52,8 @@ body {padding: 0; margin: 0;}
   height: 100%;
   width: 100%;
   position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
